initial config added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,20 @@
 {
-  "extends": "@tsconfig/react-native/tsconfig.json"
+  "extends": "@tsconfig/react-native/tsconfig.json",
+  "compilerOptions": {
+    "skipLibCheck": true,
+    "types": ["styled-components-react-native"],
+    "plugins": [
+      {
+        "no-inline-styles": false,
+        "name": "typescript-styled-plugin",
+        "lint": {
+          "validProperties": [
+            "padding-horizontal",
+            "padding-vertical",
+            "elevation"
+          ]
+        }
+      }
+    ]
+  }
 }
